[wk2] Resolve unused parameter warnings in the WebProcess.cpp https://bugs.webkit.org/show_bug.cgi?id=120412

Patch by Tamas Czene <tczene@inf.u-szeged.hu> on 2013-08-28
Reviewed by Darin Adler.

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::startMemorySampler):

Canonical link: https://commits.webkit.org/138395@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154755 268f45cc-cd09-0410-ab3c-d52691b4dbfc